<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_ver_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.08" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_ver_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.92" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_hor_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_hor_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_hor_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_hor_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/line_hor_2"
            app:layout_constraintEnd_toEndOf="@id/line_ver_2"
            app:layout_constraintStart_toStartOf="@id/line_ver_1"
            app:layout_constraintTop_toTopOf="@id/line_hor_1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/custom_et_title"
                android:hint="@string/title"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="@dimen/text_size_et"
                android:padding="@dimen/padding_edit_text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_et_title"
                android:gravity="top"
                android:textSize="@dimen/text_size_et"
                android:hint="Description"
                android:inputType="text|textMultiLine"
                android:padding="@dimen/padding_edit_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="@id/line_hor_3"
            app:layout_constraintEnd_toEndOf="@id/line_ver_2"
            app:layout_constraintStart_toStartOf="@id/line_ver_1"
            app:layout_constraintTop_toTopOf="@id/line_hor_2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remind_me_at" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.constraintlayout.widget.Guideline
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/line_half"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5"/>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/line_half"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">
                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0:00"
                        android:textSize="30dp"
                        android:layout_centerInParent="true"
                        android:textColor="@color/black"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toStartOf="@id/line_half"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">
                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="01/01/2021"
                        android:textSize="20dp"
                        android:layout_centerInParent="true"
                        android:textColor="@color/black"/>
                </RelativeLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/line_hor_4"
            app:layout_constraintEnd_toEndOf="@id/line_ver_2"
            app:layout_constraintStart_toStartOf="@id/line_ver_1"
            app:layout_constraintTop_toTopOf="@id/line_hor_3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/custom_margin_bottom"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type" />

                <Spinner
                    android:id="@+id/spinnerType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/custom_margin_bottom"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tvTags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:text="@string/tags" />

                <TextView
                    android:id="@+id/tvGetTags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tvWeeks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:text="@string/weeks" />

                <TextView
                    android:id="@+id/tvGetWeeks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/line_ver_1"
            app:layout_constraintEnd_toEndOf="@id/line_ver_2"
            app:layout_constraintTop_toTopOf="@id/line_hor_4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnTune"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tune"
                android:textAllCaps="false" />
            <TextView

                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvGetPath"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>